fix: try fixing ios alignment on date and time inputs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,10 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
+input[type="date"]::-webkit-date-and-time-value,
+input[type="time"]::-webkit-date-and-time-value {
+  text-align: start;
+}
 
 
 
